--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,33 @@
 certifi==2023.7.22
 charset-normalizer==3.2.0
+contourpy==1.1.0
+cycler==0.11.0
 filelock==3.12.3
+fonttools==4.42.1
 idna==3.4
 Jinja2==3.1.2
 joblib==1.3.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.3
+matplotlib==3.7.2
 mpmath==1.3.0
 networkx==3.1
 numpy==1.25.2
+opencv-python==4.8.0.76
+packaging==23.1
 pandas==2.1.0
 Pillow==10.0.0
+pydicom==2.4.3
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.31.0
 scikit-learn==1.3.0
 scipy==1.11.2
+seaborn==0.12.2
 six==1.16.0
 sympy==1.12
+tabulate==0.9.0
 threadpoolctl==3.2.0
 torch==2.0.1
 torchvision==0.15.2
