--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ contourpy==1.1.0
 cycler==0.11.0
 filelock==3.12.3
 fonttools==4.42.1
+fvcore==0.1.5.post20221221
 idna==3.4
+iopath==0.1.10
 Jinja2==3.1.2
 joblib==1.3.2
 kiwisolver==1.4.5
@@ -17,10 +19,12 @@ opencv-python==4.8.0.76
 packaging==23.1
 pandas==2.1.0
 Pillow==10.0.0
+portalocker==2.7.0
 pydicom==2.4.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
+PyYAML==6.0.1
 requests==2.31.0
 scikit-learn==1.3.0
 scipy==1.11.2
@@ -28,6 +32,7 @@ seaborn==0.12.2
 six==1.16.0
 sympy==1.12
 tabulate==0.9.0
+termcolor==2.3.0
 threadpoolctl==3.2.0
 torch==2.0.1
 torchvision==0.15.2
@@ -35,3 +40,4 @@ tqdm==4.66.1
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
+yacs==0.1.8
