--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,50 @@
-certifi==2023.7.22
-charset-normalizer==3.2.0
-contourpy==1.1.0
+async-generator==1.10
+attrs==22.2.0
+certifi==2022.12.7
+contourpy==1.0.7
 cycler==0.11.0
-filelock==3.12.3
-fonttools==4.42.1
-fvcore==0.1.5.post20221221
+distlib==0.3.6
+et-xmlfile==1.1.0
+filelock==3.8.2
+fonttools==4.38.0
+h11==0.14.0
 idna==3.4
-iopath==0.1.10
 Jinja2==3.1.2
-joblib==1.3.2
-kiwisolver==1.4.5
+joblib==1.2.0
+kiwisolver==1.4.4
 MarkupSafe==2.1.3
-matplotlib==3.7.2
+matplotlib==3.6.3
 mpmath==1.3.0
 networkx==3.1
-numpy==1.25.2
-opencv-python==4.8.0.76
-packaging==23.1
-pandas==2.1.0
-Pillow==10.0.0
-portalocker==2.7.0
-pydicom==2.4.3
+numpy==1.24.1
+opencv-python==4.6.0.66
+openpyxl==3.1.1
+outcome==1.2.0
+packaging==23.0
+pandas==2.0.1
+Pillow==9.4.0
+platformdirs==2.6.0
+pyarrow==11.0.0
 pyparsing==3.0.9
+PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2023.3
-PyYAML==6.0.1
-requests==2.31.0
-scikit-learn==1.3.0
-scipy==1.11.2
-seaborn==0.12.2
+pytz==2022.7
+PyYAML==6.0
+scikit-learn==1.2.1
+scipy==1.9.3
+selenium==4.8.0
+sentencepiece==0.1.99
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 sympy==1.12
-tabulate==0.9.0
-termcolor==2.3.0
-threadpoolctl==3.2.0
+threadpoolctl==3.1.0
 torch==2.0.1
-torchvision==0.15.2
-tqdm==4.66.1
+tqdm==4.64.1
+trio==0.22.0
+trio-websocket==0.9.2
 typing_extensions==4.7.1
 tzdata==2023.3
-urllib3==2.0.4
-yacs==0.1.8
+urllib3==1.26.14
+virtualenv==20.17.1
+wsproto==1.2.0
